cloudformation_templates/create-security-groups.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Creates the security groups

Parameters:
  VpcParameter:
    Type: String
    Description: The vpc id where the security group will be created
  NamespaceParameter:
    Type: String
    Description: Prefix that will be assigned to the security group name
  CidrIpParameter:
    Type: String
    Description: IP address range (in CIDR notation)
    Default: 0.0.0.0/0

Resources:
  SshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${NamespaceParameter}-ssh-sg"
      GroupDescription: Security group that allows incoming SSH request (por 22)
      VpcId: !Ref VpcParameter
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref CidrIpParameter
      Tags:
      - Key: Name
        Value: !Sub "${NamespaceParameter}-ssh-sg"
  IcmpSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${NamespaceParameter}-icmp-sg"
      GroupDescription: Security group that allows incoming ICMP request
      VpcId: !Ref VpcParameter
      SecurityGroupIngress:
      - IpProtocol: icmp
        FromPort: 8
        ToPort: -1
        CidrIp: !Ref CidrIpParameter
      Tags:
      - Key: Name
        Value: !Sub "${NamespaceParameter}-icmp-sg"
  JenkinsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${NamespaceParameter}-jenkins-sg"
      GroupDescription: Security group that allows incoming TCP request (ports 8080 and 50000)
      VpcId: !Ref VpcParameter
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: !Ref CidrIpParameter
      - IpProtocol: tcp
        FromPort: 50000
        ToPort: 50000
        CidrIp: !Ref CidrIpParameter
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: !Ref CidrIpParameter
      Tags:
      - Key: Name
        Value: !Sub "${NamespaceParameter}-jenkins-sg"

Outputs:
  SshSecGrp:
    Description: Security group that allows incoming SSH request (por 22)
    Value: !Ref SshSecurityGroup
    Export:
      Name: !Sub "${NamespaceParameter}-ssh-sg"
  IcmpSecGrp:
    Description: Security group that allows incoming ICMP request
    Value: !Ref IcmpSecurityGroup
    Export:
      Name: !Sub "${NamespaceParameter}-icmp-sg"
  JenkinsSecGrp:
    Description: Security group that allows incoming TCP request (ports 8080 and 50000)
    Value: !Ref JenkinsSecurityGroup
    Export:
      Name: !Sub "${NamespaceParameter}-jenkins-sg"
